k8s/backendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev-student-app
  labels:
    app: backend
spec:
  replicas: 1  # Number of pods for the backend service
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vanthiyadevan4g/student_backend:15  # Replace with your actual image name
          ports:
            - containerPort: 5000  # Port your app is listening on
