k8s/frontendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev-student-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
